# bouclier

./: .env.example  .gitignore  DEMO_GUIDE.md  PROGRESS.md  PermissionVaultHarness_log.txt  PyPI-Recovery-Codes-incyashraj-2026-03-16T20_21_03.432303.txt  README.md  RevocationReg_log.txt  SpendTracker_log.txt  agent_trust_layer_deepdive.md  bun-workspace.json  docker-compose.yml  npm_recovery_codes.txt  package-lock.json
api/: alembic.ini  docker-compose.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_users_and_invites.py
api/app/: auth.py  config.py  db.py  main.py  middleware.py  siwe_auth.py
api/app/models/: database.py  schemas.py
api/app/routes/: agents.py  alerts.py  billing.py  compliance.py  operations.py  platform.py
api/app/services/: alerts.py  anomaly.py  billing.py  blockchain.py  compliance.py  ipfs.py  sentinel.py  webhooks.py
api/tests/: test_api.py
architecture/: system-overview.md
bouclier-docs/: docusaurus.config.ts  package.json  sidebars.ts  vercel.json
business/: demo-script.md  due-diligence-package.md  execution-plan.md  investor-materials.md  one-pager.md  seed-deck.md  valuation-model.md
contracts/: .gitignore  .gitmodules  echidna.yaml  foundry.toml  slither-report-own.json  slither-report.json  tenderly.yaml  tenderly_actions.py
dashboard/: .env.example  Dockerfile  FRONTEND_REDESIGN_GUIDELINES.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
deployments/: base-sepolia.json
docs/: eip-draft-agent-permission-validator.md
phases/: phase-0-research-foundations.md  phase-1-core-protocol-mvp.md  phase-2-developer-ecosystem.md  phase-3-security-audit.md  phase-4-enterprise-pilot.md  (+1 more)
python-sdk/: README.md  pyproject.toml
python-sdk/bouclier_sdk/: __init__.py  abis.py  client.py  types.py
python-sdk/tests/: test_client.py
(+386 files in other folders)
