[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bouclier-sdk"
version = "0.1.0"
description = "Python SDK for the Bouclier AI Agent Trust Layer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ai", "agents", "ethereum", "erc4337", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "eth-typing>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["bouclier_sdk"]
